// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BuildZeroState snapshot test should render loading state properly 1`] = `
<div>
  <div
    class="Layout--vertical StyledProps--main loadingContainer"
  >
    <span
      class="bp3-icon StyledProps--main"
      data-icon="report-gear-grey"
      style="margin: 0px auto;"
    >
      <svg
        fill="none"
        height="100"
        viewBox="0 0 86 71"
        width="100"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m74.284 15.2383h-62.8557c-3.15587 0-5.71419 2.5583-5.71419 5.7141v39.9991c0 3.1559 2.55832 5.7142 5.71419 5.7142h62.8557c3.1558 0 5.7141-2.5583 5.7141-5.7142v-39.9991c0-3.1558-2.5583-5.7141-5.7141-5.7141z"
          fill="#6b6d85"
        />
        <path
          d="m19.0469.15h47.618c1.4757 0 2.891.586221 3.9344 1.6297 1.0435 1.04348 1.6297 2.45875 1.6297 3.93446v56.99154h-58.7462v-56.99154c0-1.47571.5862-2.89098 1.6297-3.93446 1.0434-1.043479 2.4587-1.6297 3.9344-1.6297z"
          fill="#f3f3fa"
          stroke="#000"
          stroke-width="0.3"
        />
        <path
          d="m19.0469 5.71484h3.8094v3.80944h-3.8094z"
          fill="#9293ab"
        />
        <path
          d="m26.666 5.71484h3.8095v3.80944h-3.8095z"
          fill="#9293ab"
        />
        <path
          d="m34.2852 5.71484h3.8094v3.80944h-3.8094z"
          fill="#9293ab"
        />
        <path
          d="m19.0469 13.332h47.6179v3.8095h-47.6179z"
          fill="#9293ab"
        />
        <path
          d="m19.0469 20.9531h11.4283v3.8095h-11.4283z"
          fill="#9293ab"
        />
        <path
          d="m19.0469 28.5742h7.6189v3.8095h-7.6189z"
          fill="#9293ab"
        />
        <g
          fill="#b0b1c4"
        >
          <path
            d="m22.8572 45.7188h3.8094v5.7141h-3.8094z"
          />
          <path
            d="m30.4763 36.1914h3.8095v15.2378h-3.8095z"
          />
          <path
            d="m38.0947 40.0039h3.8095v11.4283h-3.8095z"
          />
          <path
            d="m45.7139 30.4805h3.8094v20.9519h-3.8094z"
          />
          <path
            d="m53.333 34.2852h3.8094v17.1424h-3.8094z"
          />
          <path
            d="m60.9517 22.8594h3.8094v28.5708h-3.8094z"
          />
          <path
            d="m19.0479 49.5273h47.6179v3.8095h-47.6179z"
          />
        </g>
        <path
          d="m51.4274 60.9516c-1.2196 1.2196-2.8737 1.9047-4.5985 1.9047h-7.9455c-1.7247 0-3.3789-.6851-4.5985-1.9047s-2.8737-1.9047-4.5984-1.9047h-29.6865v5.7141c0 1.5155.602026 2.9689 1.67364 4.0405 1.07161 1.0717 2.52503 1.6737 4.04052 1.6737h74.28404c1.5155 0 2.9689-.602 4.0405-1.6737 1.0716-1.0716 1.6736-2.525 1.6736-4.0405v-5.7141h-29.6864c-1.7248 0-3.3789.6851-4.5985 1.9047z"
          fill="#d9dae6"
        />
      </svg>
    </span>
    <p
      class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey600 StyledProps--padding-top-medium"
      style="font-size: 20px; font-weight: 600;"
    >
      pipeline.testsReports.willBeDisplayedIfAvailable
    </p>
    <p
      class="StyledProps--font StyledProps--main StyledProps--padding-top-xsmall StyledProps--padding-bottom-large"
      style="font-size: 16px;"
    />
    <a
      href="https://docs.harness.io"
      rel="noreferrer"
      target="_blank"
    >
      <p
        class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-primary6 StyledProps--flex StyledProps--flex-align-center-center"
        style="font-size: 16px; display: flex; align-items: center;"
      >
        learnMore
        <span
          class="bp3-icon StyledProps--main Text--icon StyledProps--padding-left-xsmall StyledProps--color StyledProps--color-primary6"
          data-icon="main-share"
        >
          <svg
            enable-background="new 0 0 14 14"
            height="16"
            viewBox="0 0 14 14"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m10.5 12.6h-9.1v-9.1h6.1l1.4-1.4h-8.2c-.4 0-.7.3-.7.7v10.5c0 .4.3.7.7.7h10.5c.4 0 .7-.3.7-.7v-8.2l-1.4 1.4zm2.8-12.6h-4.9c-.4 0-.7.3-.7.7s.3.7.7.7h3.2l-5.1 5.1c-.1.1-.2.3-.2.5 0 .4.3.7.7.7.2 0 .4-.1.5-.2l5.1-5.1v3.2c0 .4.3.7.7.7s.7-.3.7-.7v-4.9c0-.4-.3-.7-.7-.7z"
              fill="#4d5969"
            />
          </svg>
        </span>
      </p>
    </a>
  </div>
</div>
`;

exports[`BuildZeroState snapshot test should render properly 1`] = `
<div>
  <div
    class="Layout--vertical StyledProps--main loadingContainer"
  >
    <img
      alt=""
      src="test-file-stub"
    />
    <p
      class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey600 StyledProps--padding-top-medium"
      style="font-size: 20px; font-weight: 600;"
    >
      pipeline.testsReports.noTestResults
    </p>
    <p
      class="StyledProps--font StyledProps--main StyledProps--padding-top-xsmall StyledProps--padding-bottom-large"
      style="font-size: 16px;"
    >
      pipeline.testsReports.testsWillAppear
    </p>
    <a
      href="https://ngdocs.harness.io/article/sof7n3qjap-viewing-tests"
      rel="noreferrer"
      target="_blank"
    >
      <p
        class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-primary6 StyledProps--flex StyledProps--flex-align-center-center"
        style="font-size: 16px; display: flex; align-items: center;"
      >
        learnMore
        <span
          class="bp3-icon StyledProps--main Text--icon StyledProps--padding-left-xsmall StyledProps--color StyledProps--color-primary6"
          data-icon="main-share"
        >
          <svg
            enable-background="new 0 0 14 14"
            height="16"
            viewBox="0 0 14 14"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m10.5 12.6h-9.1v-9.1h6.1l1.4-1.4h-8.2c-.4 0-.7.3-.7.7v10.5c0 .4.3.7.7.7h10.5c.4 0 .7-.3.7-.7v-8.2l-1.4 1.4zm2.8-12.6h-4.9c-.4 0-.7.3-.7.7s.3.7.7.7h3.2l-5.1 5.1c-.1.1-.2.3-.2.5 0 .4.3.7.7.7.2 0 .4-.1.5-.2l5.1-5.1v3.2c0 .4.3.7.7.7s.7-.3.7-.7v-4.9c0-.4-.3-.7-.7-.7z"
              fill="#4d5969"
            />
          </svg>
        </span>
      </p>
    </a>
  </div>
</div>
`;
